[#2] feat: change lowdb package with simple json db
